--- a/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
@@ -45,7 +45,11 @@
                 border-collapse: separate;
                 border-radius: 4px;
 
-                .fr-grid-th, .fr-grid-td, .fr-repeat-column-left, .fr-repeat-column-right {
+                .fr-grid-th,
+                .fr-grid-td,
+                .fr-repeat-column-left,
+                .fr-repeat-column-right,
+                 &.fr-repeat-multiple-rows .fr-grid-head {
                     border-left: 1px solid #ddd;
                     border-top: 1px solid #ddd;
                     padding: 4px 5px;
@@ -66,7 +70,6 @@
 
             .fr-grid-head, .fr-grid-body {
                 display: grid;
-                width: 100%;
                 grid-template-columns: repeat(12, 1fr);
                 //grid-template-rows: repeat(3, minmax(120px, max-content));
                 //grid-template-rows: repeat(auto-fill, 1fr); // TODO: vertical repeat sizes must be definite; figure out how to do min-height
